# mirrors

./: .gitignore  Jenkinsfile  README.md  brew.py  brew_env  fff.sh  git.py  mirror.json  setup.cfg  setup.py  ss
mirror/: __init__.py  brew.py  cask.py  config.py  download.py  inspect.py  process.py
mirror/homebrew/core/: CLEAN.delta  HEAD
mirror/tests/: test_download.py
