[metadata]
name = pymirror
version = attr: mirror.VERSION
description = My package description
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = mirror, mirrors, homebrew, brew, git, cask
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
zip_safe = False
packages = find:
install_requires =
  requests
tests_require =
  requests-mock

[options.packages.find]
include =
  mirror
  mirror.*
exclude =
  mirror.tests
